--- a/assignment3-5/src/main/resources/static/index.html
+++ b/assignment3-5/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <div id="sendMessageForm" class="ml-2 mr-2">
-    <form action="" method="" class="bg-light">
+    <form action="/addMessageandResponse" method="GET" class="bg-light">
         <div class="input-group">
             <input type="text" name="message" placeholder="Type a message" aria-describedby="button-addon2" class="form-control rounded-0 border-0 bg-light">
             <div class="input-group-append pb-1">
